k8s/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memorygame-backend
  namespace: game-2048
spec:
  replicas: 2
  selector:
    matchLabels:
      app: memorygame-backend
  template:
    metadata:
      labels:
        app: memorygame-backend
    spec:
      containers:
        - name: memorygame-backend
          image: vipunsanjana/memorygame-backend:latest
          ports:
            - containerPort: 3001
